--- a/src/assets/styles/hero.module.scss
+++ b/src/assets/styles/hero.module.scss
@@ -1,121 +1,113 @@
 .hero {
- width: calc(100% - 300px);
- display: flex;
- height: calc(100vh - 80px);
- max-height: calc(1000px - 80px);
- margin-left: 300px;
- gap: 10px;
- overflow-x: auto;
- overflow-y: auto;
- background-color: #f4f7fd;
- transition: all 0.3s;
+  width: calc(100% - 300px);
+  display: flex;
+  height: calc(100vh - 80px);
+  max-height: calc(1000px - 80px);
+  margin-left: 300px;
+  gap: 10px;
+  overflow-x: auto;
+  overflow-y: auto;
+  background-color: #f4f7fd;
+  transition: all 0.3s;
 
+  .new {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 280px;
+    min-width: 280px;
+    border-radius: 6px;
+    background: linear-gradient(180deg, #e9effa 0%, rgba(233, 239, 250, 0.5) 100%);
+    font-size: 24px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
 
+  &.hideSideBar {
+    width: 100%;
+    margin-left: 0;
+  }
 
- .new {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   width: 280px;
-   min-width: 280px;
-   border-radius: 6px;
-   background: linear-gradient(180deg, #E9EFFA 0%, rgba(233, 239, 250, 0.50) 100%);
-   font-size: 24px;
-   font-weight: 700;
-   cursor: pointer;
-   transition: all 0.3s;
+  &.dark {
+    background-color: #20212c;
 
- }
-
- &.hideSideBar {
-   width: 100%;
-   margin-left: 0;
- }
-
- &.dark {
-   background-color: #20212C;
-
-   .new {
-     background: linear-gradient(180deg, rgba(21, 21, 24, 0.313) 0%, rgba(21, 21, 24, 0.188) 0%);
-     background-color: #2B2C37;
-     color: #fff;
-   }
- }
+    .new {
+      background: linear-gradient(180deg, rgba(21, 21, 24, 0.313) 0%, rgba(21, 21, 24, 0.188) 0%);
+      background-color: #2b2c37;
+      color: #fff;
+    }
+  }
 }
 
 .noSelected {
- width: calc(100% - 300px);
- height: calc(100vh - 80px);
- max-height: calc(1000px - 80px);
- margin-left: 300px;
- display: flex;
- align-items: center;
- justify-content: center;
- font-size: 45px;
- color: #828FA3;
- text-justify: newspaper;
+  width: calc(100% - 300px);
+  height: calc(100vh - 80px);
+  max-height: calc(1000px - 80px);
+  margin-left: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 45px;
+  color: #828fa3;
+  text-justify: newspaper;
 
- &.dark {
-   color: #fff;
- }
+  &.dark {
+    color: #fff;
+  }
 
- &.hideSideBar {
-   width: 100%;
-   margin-left: 0;
- }
-
+  &.hideSideBar {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
+@media (max-width: 500px) {
+  .home,
+  .noSelected {
+    height: calc(100vh - 60px);
+    max-height: calc(1000px - 60px);
+  }
 
-@media(max-width: 500px) {
-
- .home,
- .noSelected {
-   height: calc(100vh - 60px);
-   max-height: calc(1000px - 60px);
- }
-
- .noSelected {
-   font-size: 30px;
- }
+  .noSelected {
+    font-size: 30px;
+  }
 }
-
 
 @media (max-width: 400px) {
- .home {
-   .new {
-     min-width: 240px;
-     font-size: 18px;
-   }
- }
+  .home {
+    .new {
+      min-width: 240px;
+      font-size: 18px;
+    }
+  }
 }
 
 .columnsNot {
- display: flex;
- align-items: center;
- justify-content: center;
- flex-direction: column;
- gap: 20px;
- width: 100%;
- transition: all 0.3s;
- height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  transition: all 0.3s;
+  height: fit-content;
 
+  .text {
+    font-size: 18px;
+    font-weight: 700;
+  }
 
- .text {
-   font-size: 18px;
-   font-weight: 700;
- }
+  .btn {
+    border-radius: 24px;
+    background: var(--main-purple, #635fc7);
+    font-size: 15px;
+    font-weight: 700;
+    padding: 16px;
+    color: #ffffff;
+  }
 
- .btn {
-   border-radius: 24px;
-   background: var(--main-purple, #635fc7);
-   font-size: 15px;
-   font-weight: 700;
-   padding: 16px;
-   color: #ffffff;
- }
-
- &.dark {
-   background-color: #20212C;
- }
+  &.dark {
+    background-color: #20212c;
+  }
 }
