--- a/src/assets/styles/sidebar.module.scss
+++ b/src/assets/styles/sidebar.module.scss
@@ -1,141 +1,140 @@
 .sidebar {
- position: relative;
- width: 300px;
- height: 100vh;
- max-height: 1000px;
- border-right: 1px solid #e4ebfa;
- transition: all 0.3s;
- position: absolute;
- left: 0;
- top: 0;
- background-color: #fff;
+  position: relative;
+  width: 300px;
+  height: 100vh;
+  max-height: 1000px;
+  border-right: 1px solid #e4ebfa;
+  transition: all 0.3s;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #fff;
 
- .top {
-   position: relative;
-   padding: 32px 34px;
-   height: 130px;
+  .top {
+    padding: 32px 34px;
+    .logo {
+      cursor: pointer;
+    }
+  }
+  .boardsCount {
+    margin-left: 32px;
+    margin-bottom: 19px;
+    margin-top: 22px;
+    color: #828fa3;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
 
-   .logo {
-     cursor: pointer;
-   }
+  .boards {
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+    height: 480px;
+  }
 
-   .boardsCount {
-     position: absolute;
-     bottom: 10px;
-     left: 32px;
-     margin-top: auto;
-     color: #828fa3;
-     font-size: 12px;
-     font-weight: 600;
-     text-transform: uppercase;
-   }
- }
+  .footer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 0 24px 47px;
+    user-select: none;
 
- .boards {
-   display: flex;
-   flex-direction: column;
-   padding-right: 20px;
-   height: fit-content;
-   max-height: 300px;
-   overflow: auto;
- }
+    .panel {
+      width: 100%;
+      height: 48px;
+      background-color: #f4f7fd;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 25px;
+      transition: all 0.3s;
 
- .footer {
-   width: 100%;
-   display: flex;
-   flex-direction: column;
-   gap: 24px;
-   position: absolute;
-   bottom: 0;
-   left: 0;
-   padding: 0 24px 47px;
-   user-select: none;
+      .checkbox {
+        position: relative;
+        width: 40px;
+        height: 20px;
+        border-radius: 20px;
+        background-color: #635fc7;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
 
-   .panel {
-     width: 100%;
-     height: 48px;
-     background-color: #f4f7fd;
-     border-radius: 8px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     gap: 25px;
-     transition: all 0.3s;
+        div {
+          width: 16px;
+          height: 16px;
+          background-color: #fff;
+          border-radius: 50%;
+          position: absolute;
+          left: 3px;
+          bottom: 2px;
+          transition: all 0.3s;
+        }
 
-     .checkbox {
-       position: relative;
-       width: 40px;
-       height: 20px;
-       border-radius: 20px;
-       background-color: #635fc7;
-       display: flex;
-       align-items: center;
-       cursor: pointer;
+        &.active {
+          div {
+            left: 21px;
+          }
+        }
+      }
 
-       div {
-         width: 16px;
-         height: 16px;
-         background-color: #fff;
-         border-radius: 50%;
-         position: absolute;
-         left: 3px;
-         bottom: 2px;
-         transition: all 0.3s;
-       }
+      .icon {
+        color: #828fa3;
+        font-size: 20px;
+      }
+    }
 
-       &.active {
-         div {
-           left: 21px;
-         }
-       }
-     }
+    .hideSideBar {
+      margin-left: -24px;
+      padding: 14px 31px;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      font-weight: 600;
+      color: #828fa3;
+      cursor: pointer;
+      opacity: 1;
+      z-index: 9999;
+      border-radius: 0px 100px 100px 0px;
+      .icon {
+        font-size: 22px;
+      }
+      &:hover {
+        background-color: #ffffff;
+        color: #635fc7;
+      }
+    }
+  }
 
-     .icon {
-       color: #828fa3;
-       font-size: 20px;
-     }
-   }
+  &.hideSideBar {
+    left: -300px;
+    transition: all 0.3s;
+  }
 
-   .hideSideBar {
-     display: flex;
-     gap: 10px;
-     align-items: center;
-     font-weight: 600;
-     color: #828fa3;
-     cursor: pointer;
-     opacity: 1;
-     z-index: 9999;
-    //  user-select: none;
-     .icon {
-       font-size: 22px;
-     }
-   }
- }
+  &.dark {
+    background-color: #2b2c37;
+    border-right: 1px solid #3e3f4e;
 
- &.hideSideBar {
-   left: -300px;
-   transition: all 0.3s;
- }
+    &.hideSideBar {
+      transition: all 0.3s;
+      background-color: #2b2c37;
+    }
 
- &.dark {
-   background-color: #2b2c37;
-   border-right: 1px solid #3e3f4e;
-
-   &.hideSideBar {
-     transition: all 0.3s;
-     background-color: #2b2c37;
-   }
-
-   .footer {
-     .panel {
-       background-color: #20212c;
-     }
-   }
- }
+    .footer {
+      .panel {
+        background-color: #20212c;
+      }
+    }
+  }
 }
 
 @media (max-width: 300px) {
- .sidebar {
-   width: 100%;
- }
+  .sidebar {
+    width: 100%;
+  }
 }
